[gd_scene load_steps=18 format=1]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://assets/fundo.png" type="Texture" id=2]
[ext_resource path="res://scripts/felpudo.gd" type="Script" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=9]
[ext_resource path="res://scenes/Cano.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/gerador.gd" type="Script" id=11]
[ext_resource path="res://assets/font160.fnt" type="BitmapFont" id=12]

[sub_resource type="Animation" id=1]

resource/name = "BackAnim"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite 2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 99.9914

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 1000.29, 1.18169 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 999.453, 11.5162 )
b = Vector2( 0, 10 )

[node name="GameNode" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/BackAnim = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "BackAnim"

[node name="Sprite" type="Sprite" parent="BackAnim"]

transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite 2" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 1026, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Felpudo" type="RigidBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 180.427, 784.654 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 38.4784, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 3 )

[node name="FelpudoAnim" type="AnimatedSprite" parent="Felpudo"]

transform/pos = Vector2( 18.6359, -6.10352e-05 )
transform/scale = Vector2( 1.4, 1.4 )
frames = SubResource( 3 )
animation = "default"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Felpudo"]

transform/pos = Vector2( 38.4784, 0 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Limite" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.447906, 1689.19 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limite"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Limite"]

transform/pos = Vector2( 0.447906, 1689.19 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="Canos" type="Node2D" parent="."]

z/z = 2

[node name="Cano" parent="Canos" instance=ExtResource( 10 )]

transform/pos = Vector2( 1017.16, 826.2 )
z/z = 2

[node name="Gerador" type="Position2D" parent="Canos"]

transform/pos = Vector2( 1152.8, 812.588 )
script/script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="Canos/Gerador"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="timeToReplay" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

z/z = 3

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 49.0
margin/right = 925.0
margin/bottom = 222.0
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="timeout" from="Canos/Gerador/Timer" to="Canos/Gerador" method="_on_Timer_timeout"]

[connection signal="timeout" from="timeToReplay" to="." method="_on_timeToReplay_timeout"]


